--- a/app/assets/lang/fr_FR.json
+++ b/app/assets/lang/fr_FR.json
@@ -13,7 +13,7 @@
                 },
                 "invalidCredentials": {
                     "title": "Erreur lors de la connexion:<br>Identifiants Invalides",
-                    "desc": "L'e-mail ou le mot de passe que vous avez entré est incorrecte. Veuillez réessayer."
+                    "desc": "L'e-mail ou le mot de passe que vous avez entré est incorrect. Veuillez réessayer."
                 },
                 "rateLimit": {
                     "title": "Erreur lors de la connexion:<br>Trop d'Essais",
